data/resources/style.css
containercard.not-running {
  background-color: var(--secondary-sidebar-bg-color);
}

.text-box textview {
  background: none;
}

.circle {
  border-radius: 9999px;
}

.dim-icon {
  color: alpha(var(--window-fg-color), 0.75);
}

entry button {
  margin: 0;
  padding: 0 3px;
}

button.medium {
  padding: 6px;
  -gtk-icon-size: 24px;
}

button.large {
  padding: 9px;
  -gtk-icon-size: 24px;
}

.action-bar {
  padding: 9px 18px;
}

.destructive-button label,
.destructive-button image {
  color: var(--destructive-color);
}

.sidebar-row {
  margin: 12px 6px;
}

actionsbutton .action-count-mask {
  background-color: var(--headerbar-bg-color);
  border-radius: 9999px;
  margin-left: 10px;
  padding: 7px;
}

actionsbutton .action-count-badge {
  border-radius: 9999px;
  font-feature-settings: "tnum";
  font-size: x-small;
  font-weight: bold;
  margin-top: 1px;
  margin-left: 10px;
  padding: 6px;
}

actionsbutton.ongoing .action-count-badge {
  background-color: var(--accent-bg-color);
  color: var(--accent-fg-color);
}

actionsbutton.finished .action-count-badge {
  background-color: var(--dark-3);
  color: var(--light-1);
}

actionsbutton.failed .image-button {
  color: var(--error-color);
}

connectionrow #selection-indicator #background,
actionssidebar #type {
  background-color: var(--shade-color);
  border-radius: 9999px;
}

connectionchooserpage connectionrow #color {
  border-radius: 9999px;
  margin: 0 9px 0 0;
  padding: 9px;
}

connectionssidebar connectionrow #color {
  border-radius: 9999px;
  margin: 0 6px 0 0;
  padding: 7px;
}

connectionssidebar connectionrow #selection-indicator #background,
connectionssidebar connectionrow #delete-button,
actionssidebar #action,
actionssidebar #type {
  min-height: 34px;
  min-width: 34px;
}

connectionchooserpage connectionrow #selection-indicator #background,
connectionchooserpage connectionrow #delete-button {
  min-height: 38px;
  min-width: 38px;
}

connectionrow #selection-indicator #checkmark {
  color: var(--light-1);
  border-radius: 9999px;
  border: solid var(--accent-bg-color) 1px;
  background-color: var(--accent-bg-color);
}

connectionrow #selection-indicator .selected-connection {
  border: 2px solid var(--accent-bg-color);
}

connectionrow #selection-indicator .unselected-connection,
actionssidebar #type {
  padding: 1px;
  border: 1px solid var(--border-color);
}

connectionssidebar connectionrow,
actionssidebar actionrow {
  padding: 6px 0;
}

connectionchooserpage connectionrow {
  padding: 6px;
}

.status-badge {
  font-size: 0.9em;
  font-weight: bold;
  min-width: 1.7em;
  border-radius: 9999px;
  padding: 5px 7px;
}

.status-badge-small {
  font-size: small;
  font-weight: bold;
  font-feature-settings: "tnum";
  border-radius: 9999px;
  padding: 1px 4px 0 5px;
}

.status-badge-normal {
  font-weight: bold;
  min-width: 1.7em;
  border-radius: 9999px;
  padding: 5px 7px;
}

.repo-tags-small {
  background-color: transparent;
  margin: 0 0 -3px -2px;
}

.version,
.container-health-status-not-running,
.container-status-not-running,
.image-unused,
.pod-status-not-running,
.volume-unused,
.volume-unused,
.rich-expander-row-header #badge {
  background-color: var(--dark-1);
  color: var(--light-2);
}

.container-health-status-healthy,
.container-status-running,
.image-used,
.pod-status-running,
.volume-used {
  background-color: alpha(var(--accent-color), 0.25);
  color: var(--accent-color);
}

.pod-status-degraded {
  background-color: alpha(
    oklab(from var(--accent-yellow) var(--standalone-color-oklab)),
    0.25
  );
  color: oklab(from var(--accent-yellow) var(--standalone-color-oklab));
}

.container-status-dead,
.container-status-unknown,
.pod-status-error,
.pod-status-dead,
.pod-status-unknown,
.container-health-status-unhealthy,
.container-health-status-unknown {
  background-color: alpha(
    oklab(from var(--accent-red) var(--standalone-color-oklab)),
    0.25
  );
  color: oklab(from var(--accent-red) var(--standalone-color-oklab));
}

.rich-expander-row-header {
  color: alpha(var(--window-fg-color), 0.75);
}

.rich-expander-row-header #badge {
  border-radius: 6px;
  padding: 1px 4px;
  font-weight: bold;
}

progressbar.success progress {
  background-color: var(--success-bg-color);
}

progressbar.warning progress {
  background-color: var(--warning-bg-color);
}

progressbar.error progress {
  background-color: var(--error-bg-color);
}

.text-view {
  font-size: 0.85em;
}

.star > count {
  font-size: 0.85em;
  font-feature-settings: "tnum";
}

.star > icon {
  color: var(--yellow-3);
}

